--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
     <script src="https://kit.fontawesome.com/9a2f3dcc35.js" crossorigin="anonymous"></script>
 </head>
 
-<body data-bs-spy="scroll" data-bs-target="#navbar-example">
+<body data-bs-spy="scroll" data-bs-target="#navbar">
 
-    <nav class="navbar navbar-expand-lg bg-light position-sticky top-0">
+    <nav id="navbar" class="navbar navbar-expand-lg bg-light position-sticky top-0">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">Navbar</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
@@ -25,14 +25,17 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
-                    <a class="nav-link" href="#">Features</a>
-                    <a class="nav-link" href="#">Pricing</a>
+                    <a class="nav-link active" href="#">Home</a>
+                    <a class="nav-link" href="#features">Features</a>
+                    <a class="nav-link" href="#pricing">Pricing</a>
                     <a class="nav-link disabled">Disabled</a>
                 </div>
             </div>
         </div>
     </nav>
+
+    <div id="features" style="height:100vh; background-color: brown;""></div>
+    <div id="pricing" style="height:100vh;"></div>
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
