--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
+    <title>bluepoint-it</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -16,26 +16,27 @@
 
 <body data-bs-spy="scroll" data-bs-target="#navbar">
 
-    <nav id="navbar" class="navbar navbar-expand-lg bg-light position-sticky top-0">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#">Navbar</a>
+    <nav id="navbar" class="navbar navbar-expand-lg position-sticky top-0">
+        <div class="container">
+            <a class="navbar-brand" href="#"><i class="fa-solid fa-circle"></i>bluepoint-it.pl</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
                 aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
+                <i class="fa-solid fa-bars"></i>
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                <div class="navbar-nav">
+                <div class="navbar-nav ms-auto">
                     <a class="nav-link active" href="#">Home</a>
-                    <a class="nav-link" href="#features">Features</a>
-                    <a class="nav-link" href="#pricing">Pricing</a>
-                    <a class="nav-link disabled">Disabled</a>
+                    <a class="nav-link" href="#aboutus">O nas</a>
+                    <a class="nav-link" href="#portfolio">portfolio</a>
+                    <a class="nav-link" href="#prices">ceny</a>
+                    <a class="nav-link" href="#team">zespół</a>
+                    <a class="nav-link" href="#achievements">osiągnięcia</a>
+                    <a class="nav-link" href="#contact">kontakt</a>
                 </div>
             </div>
         </div>
     </nav>
 
-    <div id="features" style="height:100vh; background-color: brown;""></div>
-    <div id="pricing" style="height:100vh;"></div>
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
