--- a/index.html
+++ b/index.html
@@ -16,9 +16,10 @@
 
 <body data-bs-spy="scroll" data-bs-target="#navbar">
 
-    <nav id="navbar" class="navbar navbar-expand-lg position-sticky top-0">
+    <nav id="navbar" class="navbar navbar-expand-lg position-fixed top-0 w-100">
         <div class="container">
-            <a class="navbar-brand" href="#"><i class="fa-solid fa-circle"></i>bluepoint-it.pl</a>
+            <a class="navbar-brand" href="#"><i class="fa-solid fa-circle"></i><span
+                    class="blue-text">blue</span>point-it.pl</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
                 aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <i class="fa-solid fa-bars"></i>
@@ -37,6 +38,15 @@
         </div>
     </nav>
 
+    <header>
+        <div class="hero-img">
+            <div class="hero-shadow"></div>
+            <div class="hero-text">
+                <h1>witajcie w <span class="blue-text">blue</span>point-it.pl</h1>
+                <p>w miejscu, gdzie gry tworzymy z pasją</p>
+            </div>
+        </div>
+    </header>
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
