--- a/index.html
+++ b/index.html
@@ -44,7 +44,10 @@
             <div class="hero-text">
                 <h1>witajcie w <span class="blue-text">blue</span>point-it.pl</h1>
                 <p>w miejscu, gdzie gry tworzymy z pasją</p>
+                <a href="#aboutus" type="button" class="btn btn-outline-light">poznaj nas</a>
             </div>
+
+            <a href="#aboutus"> <i class="fa-solid fa-chevron-down"></i></a>
         </div>
     </header>
 
