--- a/index.html
+++ b/index.html
@@ -52,9 +52,60 @@
     </header>
 
 
-    <div class="aboutus">
-        test
-    </div>
+    <main>
+        <section id="aboutus" class="aboutus bg-light py-5">
+            <div class="container">
+                <h2>o nas</h2>
+                <div class="underline"></div>
+
+                <div class="row">
+                    <div class="col-sm-6 col-md-4 text-center">
+                        <p><i class="fa-solid fa-mobile-screen"></i></p>
+
+                        <p class="aboutus-card-title mb-1">mobile gaming</p>
+                        <p class="aboutus-card-text">Tworzymy gry na urządzenia mobilne!</p>
+
+                    </div>
+                    <div class="col-sm-6 col-md-4 text-center">
+                        <p><i class="fa-solid fa-desktop"></i></p>
+
+                        <p class="aboutus-card-title mb-1">desktop gaming</p>
+                        <p class="aboutus-card-text">Tworzymy gry na PC!</p>
+
+                    </div>
+                    <div class="col-sm-6 col-md-4 text-center">
+                        <p><i class="fa-solid fa-code"></i></p>
+
+                        <p class="aboutus-card-title mb-1">najwyższe standardy</p>
+                        <p class="aboutus-card-text">Zachowujemy najwyższe standardy podczas pisania kodu.</p>
+
+                    </div>
+                    <div class="col-sm-6 col-md-4 text-center">
+                        <p><i class="fa-solid fa-dove"></i></p>
+
+                        <p class="aboutus-card-title mb-1">kochamy zwierzęta</p>
+                        <p class="aboutus-card-text">Wszystkie nasze gry są bezpieczene dla środowiska.</p>
+
+                    </div>
+                    <div class="col-sm-6 col-md-4 text-center">
+                        <p><i class="fa-solid fa-bowl-rice"></i></p>
+
+                        <p class="aboutus-card-title mb-1">lubimy dobre jedzenie</p>
+                        <p class="aboutus-card-text">Lubimy dobrze zjeść przed przystąpieniem do naszych zadań.</p>
+
+                    </div>
+                    <div class="col-sm-6 col-md-4 text-center">
+                        <p><i class="fa-solid fa-building"></i></p>
+
+                        <p class="aboutus-card-title mb-1">świetne relacje</p>
+                        <p class="aboutus-card-text">Zachwoujemy świetne relacje z naszymi klientami!</p>
+
+                    </div>
+                </div>
+
+            </div>
+        </section>
+    </main>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
