--- a/index.html
+++ b/index.html
@@ -59,42 +59,42 @@
                 <div class="underline"></div>
 
                 <div class="row">
-                    <div class="col-sm-6 col-md-4 text-center">
+                    <div class="col-sm-6 col-md-4 text-center aboutus-hover">
                         <p><i class="fa-solid fa-mobile-screen"></i></p>
 
                         <p class="aboutus-card-title mb-1">mobile gaming</p>
                         <p class="aboutus-card-text">Tworzymy gry na urządzenia mobilne!</p>
 
                     </div>
-                    <div class="col-sm-6 col-md-4 text-center">
+                    <div class="col-sm-6 col-md-4 text-center aboutus-hover">
                         <p><i class="fa-solid fa-desktop"></i></p>
 
                         <p class="aboutus-card-title mb-1">desktop gaming</p>
                         <p class="aboutus-card-text">Tworzymy gry na PC!</p>
 
                     </div>
-                    <div class="col-sm-6 col-md-4 text-center">
+                    <div class="col-sm-6 col-md-4 text-center aboutus-hover">
                         <p><i class="fa-solid fa-code"></i></p>
 
                         <p class="aboutus-card-title mb-1">najwyższe standardy</p>
                         <p class="aboutus-card-text">Zachowujemy najwyższe standardy podczas pisania kodu.</p>
 
                     </div>
-                    <div class="col-sm-6 col-md-4 text-center">
+                    <div class="col-sm-6 col-md-4 text-center aboutus-hover">
                         <p><i class="fa-solid fa-dove"></i></p>
 
                         <p class="aboutus-card-title mb-1">kochamy zwierzęta</p>
                         <p class="aboutus-card-text">Wszystkie nasze gry są bezpieczene dla środowiska.</p>
 
                     </div>
-                    <div class="col-sm-6 col-md-4 text-center">
+                    <div class="col-sm-6 col-md-4 text-center aboutus-hover">
                         <p><i class="fa-solid fa-bowl-rice"></i></p>
 
                         <p class="aboutus-card-title mb-1">lubimy dobre jedzenie</p>
                         <p class="aboutus-card-text">Lubimy dobrze zjeść przed przystąpieniem do naszych zadań.</p>
 
                     </div>
-                    <div class="col-sm-6 col-md-4 text-center">
+                    <div class="col-sm-6 col-md-4 text-center aboutus-hover">
                         <p><i class="fa-solid fa-building"></i></p>
 
                         <p class="aboutus-card-title mb-1">świetne relacje</p>
