--- a/index.html
+++ b/index.html
@@ -102,8 +102,21 @@
 
                     </div>
                 </div>
-
             </div>
+
+            <section class="aboutus-hero-img py-5">
+                <div class="aboutus-hero-shadow"></div>
+                <div class="container">
+                    <h2>Tworzymy gry na platformy</h2>
+                    <div class="underline"></div>
+
+                    <div class="row">
+
+                    </div>
+                </div>
+
+            </section>
+
         </section>
     </main>
 
