--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pl">
 
 <head>
-    <meta charset="utf-8">
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>bluepoint-it</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -51,13 +51,11 @@
         </div>
     </header>
 
-
     <main>
         <section id="aboutus" class="aboutus bg-light py-5">
             <div class="container">
                 <h2>o nas</h2>
                 <div class="underline"></div>
-
                 <div class="row">
                     <div class="col-sm-6 col-md-4 text-center aboutus-hover">
                         <p><i class="fa-solid fa-mobile-screen"></i></p>
@@ -103,20 +101,32 @@
                     </div>
                 </div>
             </div>
+        </section>
 
-            <section class="aboutus-hero-img py-5">
-                <div class="aboutus-hero-shadow"></div>
-                <div class="container">
-                    <h2>Tworzymy gry na platformy</h2>
-                    <div class="underline"></div>
-
-                    <div class="row">
+        <section class="aboutus-hero py-5">
+            <div class="aboutus-shadow"></div>
+            <div class="container py-4">
+                <h2>Tworzymy gry na platformy</h2>
+                <div class="underline"></div>
+                <div class="row">
+                    <div class="col-lg-4 text-center aboutus-hero-item">
+                        <p class="aboutus-hero-title mb-1">PC</p>
+                        <p><i class="fa-solid fa-desktop"></i></p>
+                        <p class="aboutus-hero-text">Graj ze znajomymi na swoim blaszaku!</p>
+                    </div>
+                    <div class="col-lg-4 text-center aboutus-hero-item">
+                        <p class="aboutus-hero-title mb-1">PlayStation</p>
+                        <p><i class="fa-brands fa-playstation"></i></p>
+                        <p class="aboutus-hero-text">Gry świetnie prezentują się na konsoli od Sony!</p>
 
                     </div>
+                    <div class="col-lg-4 text-center aboutus-hero-item">
+                        <p class="aboutus-hero-title mb-1">Xbox</p>
+                        <p><i class="fa-brands fa-xbox"></i></p>
+                        <p class="aboutus-hero-text">Fani Xboxa spędzą z niami mnóstwo godzin!</p>
+                    </div>
                 </div>
-
-            </section>
-
+            </div>
         </section>
     </main>
 
