--- a/index.html
+++ b/index.html
@@ -128,6 +128,51 @@
                 </div>
             </div>
         </section>
+
+        <section id="portfolio" class="portfolio bg-light py-5">
+            <h2>portfolio</h2>
+            <div class="underline"></div>
+
+            <div class="container">
+            <div id="carouselCaptions" class="carousel slide d-none d-lg-block" data-bs-ride="carousel">
+                <div class="carousel-indicators">
+                    <button type="button" data-bs-target="#carouselCaptions" data-bs-slide-to="0" class="active"
+                        aria-current="true" aria-label="Slide 1"></button>
+                    <button type="button" data-bs-target="#carouselCaptions" data-bs-slide-to="1"
+                        aria-label="Slide 2"></button>
+                </div>
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="./img/carousel_slide_1_small.jpg" class="d-block w-100"
+                            alt="Okładka gry Pro-X Football">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>Pro-X Football</h5>
+                            <p>Some representative placeholder content for the first slide.</p>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="./img/carousel_slide_2_small.jpg" class="d-block w-100"
+                            alt="Okładka gry Need For Speed">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>Need For Speed</h5>
+                            <p>Some representative placeholder content for the second slide.</p>
+                        </div>
+                    </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselCaptions"
+                    data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+                    data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+            </div>
+            </div>
+
+        </section>
     </main>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
