--- a/index.html
+++ b/index.html
@@ -134,42 +134,70 @@
             <div class="underline"></div>
 
             <div class="container">
-            <div id="carouselCaptions" class="carousel slide d-none d-lg-block" data-bs-ride="carousel">
-                <div class="carousel-indicators">
-                    <button type="button" data-bs-target="#carouselCaptions" data-bs-slide-to="0" class="active"
-                        aria-current="true" aria-label="Slide 1"></button>
-                    <button type="button" data-bs-target="#carouselCaptions" data-bs-slide-to="1"
-                        aria-label="Slide 2"></button>
-                </div>
-                <div class="carousel-inner">
-                    <div class="carousel-item active">
-                        <img src="./img/carousel_slide_1_small.jpg" class="d-block w-100"
+
+                <!--PORTFOLIO NA MOBILE-->
+
+                <div class="card-group d-lg-none">
+                    <div class="card me-sm-3">
+                        <img src="./img/carousel_slide_1_small.jpg" class="card-img-top"
                             alt="Okładka gry Pro-X Football">
-                        <div class="carousel-caption d-none d-md-block">
-                            <h5>Pro-X Football</h5>
-                            <p>Some representative placeholder content for the first slide.</p>
+                        <div class="card-body">
+                            <h5 class="card-title">Pro-X Football</h5>
+                            <p class="card-text">This is a wider card with supporting text below as a natural
+                                lead-in to
+                                additional content. This content is a little bit longer.</p>
                         </div>
                     </div>
-                    <div class="carousel-item">
-                        <img src="./img/carousel_slide_2_small.jpg" class="d-block w-100"
+                    <div class="card">
+                        <img src="./img/carousel_slide_2_small.jpg" class="card-img-top"
                             alt="Okładka gry Need For Speed">
-                        <div class="carousel-caption d-none d-md-block">
-                            <h5>Need For Speed</h5>
-                            <p>Some representative placeholder content for the second slide.</p>
+                        <div class="card-body">
+                            <h5 class="card-title">Need For Speed</h5>
+                            <p class="card-text">This card has supporting text below as a natural lead-in to
+                                additional
+                                content.</p>
                         </div>
                     </div>
                 </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselCaptions"
-                    data-bs-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Previous</span>
-                </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
-                    data-bs-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Next</span>
-                </button>
-            </div>
+
+                <!--PORTFOLIO NA DESKTOPY-->
+
+                <div id="carouselCaptions" class="carousel slide d-none d-lg-block" data-bs-ride="carousel">
+                    <div class="carousel-indicators">
+                        <button type="button" data-bs-target="#carouselCaptions" data-bs-slide-to="0" class="active"
+                            aria-current="true" aria-label="Slide 1"></button>
+                        <button type="button" data-bs-target="#carouselCaptions" data-bs-slide-to="1"
+                            aria-label="Slide 2"></button>
+                    </div>
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img src="./img/carousel_slide_1_big.jpg" class="d-block w-100"
+                                alt="Okładka gry Pro-X Football">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5>Pro-X Football</h5>
+                                <p>Some representative placeholder content for the first slide.</p>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <img src="./img/carousel_slide_2_big.jpg" class="d-block w-100"
+                                alt="Okładka gry Need For Speed">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5>Need For Speed</h5>
+                                <p>Some representative placeholder content for the second slide.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselCaptions"
+                        data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+                        data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Next</span>
+                    </button>
+                </div>
             </div>
 
         </section>
