--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
             <h2>portfolio</h2>
             <div class="underline"></div>
 
-            <div class="container">
+            <div class="container pb-4">
 
                 <!--PORTFOLIO NA MOBILE-->
 
@@ -199,6 +199,80 @@
                     </button>
                 </div>
             </div>
+
+        </section>
+
+        <section id="prices" class="prices py-5 bg-light">
+            <h2>ceny</h2>
+            <div class="underline"></div>
+
+            <div class="container">
+                <div class="price-wrap row text-center justify-content-center">
+                    <div class="col-md-6 col-xl-4">
+                        <div class="price-box">
+                            <h3>mobile</h3>
+                            <p class="separator"></p>
+                            <p><span>Urządzenia</span>
+                                <i class="fa-solid fa-mobile-screen"></i>
+                            </p>
+                            <p><span>Długość gry:</span> Krótka</p>
+                            <p><span>Grafika:</span> Średnia</p>
+                            <p><span>Online:</span> Brak</p>
+                            <p class="price-tag">449zł</p>
+                            <button class="btn btn-secondary">
+                                Zamawiam
+                            </button>
+                        </div>
+                    </div>
+
+                    <div class="col-md-6 col-xl-4">
+                        <div class="price-box">
+                            <h3>mobile & pc</h3>
+                            <p class="separator"></p>
+                            <p><span>Urządzenia</span>
+                                <i class="fa-solid fa-mobile-screen"></i>
+                                <i class="fa-solid fa-desktop"></i>
+                            </p>
+                            <p><span>Długość gry:</span> Średnia</p>
+                            <p><span>Grafika:</span> Ładna</p>
+                            <p><span>Online:</span> Tak</p>
+                            <p class="price-tag">2499zł</p>
+                            <button class="btn btn-primary">
+                                Zamawiam
+                            </button>
+                        </div>
+                    </div>
+
+                    <div class="col-md-6 col-xl-4">
+                        <div class="price-box">
+                            <h3>full pack</h3>
+                            <p class="separator"></p>
+                            <p><span>Urządzenia</span>
+                                <i class="fa-solid fa-mobile-screen"></i>
+                                <i class="fa-solid fa-desktop"></i>
+                                <i class="fa-brands fa-playstation"></i>
+                            </p>
+                            <p><span>Długość gry:</span> Długa</p>
+                            <p><span>Grafika:</span> Najlepsza</p>
+                            <p><span>Online:</span> Tak</p>
+                            <h2 class="price-tag">4999zł</h2>
+                            <button class="btn btn-secondary">
+                                Zamawiam
+                            </button>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="text-center">
+                    <p class="price-info">Skorzystaj z jednego z trzech głównych pakietów lub <a
+                            href="#contact">skontaktuj się</a> z
+                        nami i ustal warunki
+                        indywidualne!</p>
+                    <p class="price-muted">Pakiet <strong>FULL PACK</strong> zawiera wersję gier na urządzenia mobilne,
+                        PC oraz konsole.</p>
+                </div>
+            </div>
+
 
         </section>
     </main>
