--- a/index.html
+++ b/index.html
@@ -276,6 +276,94 @@
 
 
         </section>
+
+        <section id="team" class="team py-5">
+
+            <h2>team</h2>
+            <div class="underline"></div>
+
+            <div class="container">
+                <div class="card-group">
+                    <div class="card mx-3">
+                        <img src="./img/team/adult-2449725_1920.jpg" class="card-img-top" alt="Mężczyzna z brodą.">
+                        <div class="card-body">
+                            <h5 class="card-title">seo</h5>
+                            <p class="card-text">Szef szefów. Nikt nie zna jego imienia. Podwładni mówią na niego "Pan
+                                prezes"</p>
+                        </div>
+                        <div class="card-footer d-flex justify-content-around">
+                            <small class="text-muted">
+                                <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+                                <a href="#"><i class="fa-brands fa-twitter"></i></a>
+                                <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
+                            </small>
+                        </div>
+                    </div>
+                    <div class="card mx-3">
+                        <img src="./img/team/woman-1320810_1920.jpg" class="card-img-top"
+                            alt="Kobieta w długich włosach.">
+                        <div class="card-body">
+                            <h5 class="card-title">hr</h5>
+                            <p class="card-text">Paula zajmuje się rekrutowaniem młodych i gniewnych talentów.</p>
+                        </div>
+                        <div class="card-footer d-flex justify-content-around">
+                            <small class="text-muted">
+                                <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+                                <a href="#"><i class="fa-brands fa-twitter"></i></a>
+                                <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
+                            </small>
+                        </div>
+                    </div>
+                    <div class="card mx-3">
+                        <img src="./img/team/building-2762241_1920.jpg" class="card-img-top" alt="Budowlaniec w kasku.">
+                        <div class="card-body">
+                            <h5 class="card-title">grafik</h5>
+                            <p class="card-text">Pan Wiesio jest grafikiem z długoletnim stażem na L4.</p>
+                        </div>
+                        <div class="card-footer d-flex justify-content-around">
+                            <small class="text-muted">
+                                <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+                                <a href="#"><i class="fa-brands fa-twitter"></i></a>
+                                <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
+                            </small>
+                        </div>
+                    </div>
+
+                    <div class="card mx-3">
+                        <img src="./img/team/entrepreneur-2326419_1920.jpg" class="card-img-top"
+                            alt="Pracownik korporacji z laptopem.">
+                        <div class="card-body">
+                            <h5 class="card-title">tomek</h5>
+                            <p class="card-text">To jest tomek. Nikt oprócz prezesa nie wie, czym zajmuje się Tomek.</p>
+                        </div>
+                        <div class="card-footer d-flex justify-content-around">
+                            <small class="text-muted">
+                                <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+                                <a href="#"><i class="fa-brands fa-twitter"></i></a>
+                                <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
+                            </small>
+                        </div>
+                    </div>
+
+                    <div class="card mx-3">
+                        <img src="./img/team/women-1209678_1920.jpg" class="card-img-top"
+                            alt="Dwie dziewczyny przy komputerze w biurze.">
+                        <div class="card-body">
+                            <h5 class="card-title">dział jakości</h5>
+                            <p class="card-text">Ania i Hania sprawdzają starannie każdy nasz produkt.</p>
+                        </div>
+                        <div class="card-footer d-flex justify-content-around">
+                            <small class="text-muted">
+                                <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+                                <a href="#"><i class="fa-brands fa-twitter"></i></a>
+                                <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
+                            </small>
+                        </div>
+                    </div>
+                </div>
+            </div>>
+
+        </section>
     </main>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
