--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
         </section>
 
         <section id="team" class="team py-5">
-
+            <div class="team-shadow"></div>
             <h2>team</h2>
             <div class="underline"></div>
 
