--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <script src="https://kit.fontawesome.com/9a2f3dcc35.js" crossorigin="anonymous"></script>
 </head>
 
-<body data-bs-spy="scroll" data-bs-target="#navbar data-bs-offset=82">
+<body data-bs-spy="scroll" data-bs-target="#navbar" data-bs-offset="82">
 
     <nav id="navbar" class="navbar navbar-expand-lg position-fixed top-0 w-100 py-3">
         <div class="container">
@@ -278,12 +278,11 @@
         </section>
 
         <section id="team" class="team py-5">
-            <div class="team-shadow"></div>
             <h2>team</h2>
             <div class="underline"></div>
 
             <div class="container">
-                <div class="card-group">
+                <div class="card-group team-carousel">
                     <div class="card mx-3">
                         <img src="./img/team/adult-2449725_1920.jpg" class="card-img-top" alt="Mężczyzna z brodą.">
                         <div class="card-body">
@@ -292,11 +291,9 @@
                                 prezes"</p>
                         </div>
                         <div class="card-footer d-flex justify-content-around">
-                            <small class="text-muted">
-                                <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
-                                <a href="#"><i class="fa-brands fa-twitter"></i></a>
-                                <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
-                            </small>
+                            <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+                            <a href="#"><i class="fa-brands fa-twitter"></i></a>
+                            <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
                         </div>
                     </div>
                     <div class="card mx-3">
@@ -307,11 +304,9 @@
                             <p class="card-text">Paula zajmuje się rekrutowaniem młodych i gniewnych talentów.</p>
                         </div>
                         <div class="card-footer d-flex justify-content-around">
-                            <small class="text-muted">
-                                <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
-                                <a href="#"><i class="fa-brands fa-twitter"></i></a>
-                                <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
-                            </small>
+                            <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+                            <a href="#"><i class="fa-brands fa-twitter"></i></a>
+                            <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
                         </div>
                     </div>
                     <div class="card mx-3">
@@ -321,14 +316,11 @@
                             <p class="card-text">Pan Wiesio jest grafikiem z długoletnim stażem na L4.</p>
                         </div>
                         <div class="card-footer d-flex justify-content-around">
-                            <small class="text-muted">
-                                <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
-                                <a href="#"><i class="fa-brands fa-twitter"></i></a>
-                                <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
-                            </small>
+                            <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+                            <a href="#"><i class="fa-brands fa-twitter"></i></a>
+                            <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
                         </div>
                     </div>
-
                     <div class="card mx-3">
                         <img src="./img/team/entrepreneur-2326419_1920.jpg" class="card-img-top"
                             alt="Pracownik korporacji z laptopem.">
@@ -337,14 +329,11 @@
                             <p class="card-text">To jest tomek. Nikt oprócz prezesa nie wie, czym zajmuje się Tomek.</p>
                         </div>
                         <div class="card-footer d-flex justify-content-around">
-                            <small class="text-muted">
-                                <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
-                                <a href="#"><i class="fa-brands fa-twitter"></i></a>
-                                <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
-                            </small>
+                            <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+                            <a href="#"><i class="fa-brands fa-twitter"></i></a>
+                            <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
                         </div>
                     </div>
-
                     <div class="card mx-3">
                         <img src="./img/team/women-1209678_1920.jpg" class="card-img-top"
                             alt="Dwie dziewczyny przy komputerze w biurze.">
@@ -353,24 +342,29 @@
                             <p class="card-text">Ania i Hania sprawdzają starannie każdy nasz produkt.</p>
                         </div>
                         <div class="card-footer d-flex justify-content-around">
-                            <small class="text-muted">
-                                <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
-                                <a href="#"><i class="fa-brands fa-twitter"></i></a>
-                                <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
-                            </small>
+                            <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+                            <a href="#"><i class="fa-brands fa-twitter"></i></a>
+                            <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
                         </div>
                     </div>
                 </div>
-            </div>>
-
+            </div>
+            <div class="team-shadow"></div>
         </section>
     </main>
+
+    <div style="height: 200vh;"></div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous">
         </script>
+
+    <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+
     <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
-    <script src="./js/script.js"></script>
+    <script scr="/js/slicksettings.js"></script>
+    <script src="/js/script.js"></script>
 </body>
 
 </html>
