--- a/index.html
+++ b/index.html
@@ -260,11 +260,7 @@
             </div>
         </section>
 
-
-
         <section id="team" class="team py-5">
-
-
 
             <h2>team</h2>
             <div class="underline"></div>
@@ -341,6 +337,51 @@
             <div class="team-shadow"></div>
 
         </section>
+
+        <section id="achievements" class="achievements py-5">
+            <h2>osiągnięcia</h2>
+            <div class="underline"></div>
+
+            <div class="container pb-4">
+                <div class="row">
+                    <div class="col-sm-6 col-md-2 text-center achievement-hover">
+                        <p><i class="fa-regular fa-thumbs-up"></i></p>
+                        <p class="achievement-card-title mb-1">100%</p>
+                        <p class="achievement-card-text">zadowolonych klientów</p>
+                    </div>
+                    <div class="col-sm-6 col-md-2 text-center achievement-hover">
+                        <p><i class="fas fa-desktop"></i></p>
+                        <p class="achievement-card-title mb-1">37</p>
+                        <p class="achievement-card-text">zdobytych nagród</p>
+                    </div>
+                    <div class="col-sm-6 col-md-2 text-center achievement-hover">
+                        <p><i class="fas fa-file-code"></i></p>
+                        <p class="achievement-card-title mb-1">143</p>
+                        <p class="achievement-card-text">pracowików</p>
+                    </div>
+                    <div class="col-sm-6 col-md-2 text-center achievement-hover">
+                        <p><i class="fas fa-paw"></i></p>
+                        <p class="achievement-card-title mb-1">7</p>
+                        <p class="achievement-card-text">nowoczesnych biur</p>
+                    </div>
+                    <div class="col-sm-6 col-md-2 text-center achievement-hover">
+                        <p><i class="fas fa-hamburger"></i></p>
+                        <p class="achievement-card-title mb-1">58</p>
+                        <p class="achievement-card-text">stworzonych gier</p>
+                    </div>
+                    <div class="col-sm-6 col-md-2 text-center achievement-hover">
+                        <p><i class="fas fa-glass-cheers"></i></p>
+                        <p class="achievement-card-title mb-1">80.000</p>
+                        <p class="achievement-card-text">fanów w social media</p>
+                    </div>
+                </div>
+
+
+            </div>
+
+
+        </section>
+
 
 
     </main>
