--- a/index.html
+++ b/index.html
@@ -343,34 +343,34 @@
             <div class="underline"></div>
 
             <div class="container pb-4">
-                <div class="row">
-                    <div class="col-sm-6 col-md-2 text-center achievement-hover">
+                <div class="row text-center achievements-list">
+                    <div class="col-md-6 col-lg-4 col-xl-2 achievement">
                         <p><i class="fa-regular fa-thumbs-up"></i></p>
                         <p class="achievement-card-title mb-1">100%</p>
                         <p class="achievement-card-text">zadowolonych klientów</p>
                     </div>
-                    <div class="col-sm-6 col-md-2 text-center achievement-hover">
-                        <p><i class="fas fa-desktop"></i></p>
+                    <div class="col-md-6 col-lg-4 col-xl-2 achievement">
+                        <p><i class="fas fa-trophy"></i></p>
                         <p class="achievement-card-title mb-1">37</p>
                         <p class="achievement-card-text">zdobytych nagród</p>
                     </div>
-                    <div class="col-sm-6 col-md-2 text-center achievement-hover">
-                        <p><i class="fas fa-file-code"></i></p>
+                    <div class="col-md-6 col-lg-4 col-xl-2 achievement">
+                        <p><i class="fas fa-user-group"></i></p>
                         <p class="achievement-card-title mb-1">143</p>
                         <p class="achievement-card-text">pracowików</p>
                     </div>
-                    <div class="col-sm-6 col-md-2 text-center achievement-hover">
-                        <p><i class="fas fa-paw"></i></p>
+                    <div class="col-md-6 col-lg-4 col-xl-2 achievement">
+                        <p><i class="fas fa-building"></i></p>
                         <p class="achievement-card-title mb-1">7</p>
                         <p class="achievement-card-text">nowoczesnych biur</p>
                     </div>
-                    <div class="col-sm-6 col-md-2 text-center achievement-hover">
-                        <p><i class="fas fa-hamburger"></i></p>
+                    <div class="col-md-6 col-lg-4 col-xl-2 achievement">
+                        <p><i class="fas fa-dice"></i></p>
                         <p class="achievement-card-title mb-1">58</p>
                         <p class="achievement-card-text">stworzonych gier</p>
                     </div>
-                    <div class="col-sm-6 col-md-2 text-center achievement-hover">
-                        <p><i class="fas fa-glass-cheers"></i></p>
+                    <div class="col-md-6 col-lg-4 col-xl-2 achievement">
+                        <p><i class="fas fa-share-nodes"></i></p>
                         <p class="achievement-card-title mb-1">80.000</p>
                         <p class="achievement-card-text">fanów w social media</p>
                     </div>
