--- a/index.html
+++ b/index.html
@@ -419,14 +419,11 @@
 
         </section>
 
-
-
     </main>
 
-
-    <div style="height: 200vh;"></div>
-
-
+    <footer class="bg-dark text-light py-4 text-center">
+        <p class="mb-0"> &copy; 2022 | bluepoint-it </p>
+    </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous">
