--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="css/main.css">
     <script src="https://kit.fontawesome.com/9a2f3dcc35.js" crossorigin="anonymous"></script>
 </head>
@@ -43,9 +44,11 @@
         <div class="hero-img">
             <div class="hero-shadow"></div>
             <div class="hero-text">
-                <h1>witajcie w <span class="blue-text">blue</span>point-it.pl</h1>
-                <p>W miejscu, gdzie gry tworzymy z pasją</p>
-                <a href="#aboutus" type="button" class="btn btn-outline-light">poznaj nas</a>
+                <h1 data-aos="fade-up" data-aos-delay="200">witajcie w <span class="blue-text">blue</span>point-it.pl
+                </h1>
+                <p data-aos="fade-up" data-aos-delay="400">W miejscu, gdzie gry tworzymy z pasją</p>
+                <a data-aos="fade-up" data-aos-delay="600" href="#aboutus" type="button"
+                    class="btn btn-outline-light">poznaj nas</a>
             </div>
             <a href="#aboutus"><i class="fas fa-chevron-down bounce-top"></i></a>
         </div>
@@ -58,33 +61,33 @@
                 <div class="underline"></div>
 
                 <div class="row">
-                    <div class="col-sm-6 col-md-4 text-center aboutus-hover">
-                        <p><i class="fas fa-mobile-alt"></i></p>
+                    <div class="col-sm-6 col-md-4 text-center aboutus-hover" data-aos="fade-in" data-aos-delay="100">
+                        <p><i class=" fas fa-mobile-alt"></i></p>
                         <p class="aboutus-card-title mb-1">mobile gaming</p>
                         <p class="aboutus-card-text">Tworzymy gry na urządzenia mobilne!</p>
                     </div>
-                    <div class="col-sm-6 col-md-4 text-center aboutus-hover">
-                        <p><i class="fas fa-desktop"></i></p>
+                    <div class="col-sm-6 col-md-4 text-center aboutus-hover" data-aos="fade-in" data-aos-delay="200">
+                        <p><i class=" fas fa-desktop"></i></p>
                         <p class="aboutus-card-title mb-1">desktop gaming</p>
                         <p class="aboutus-card-text">Tworzymy gry na PC!</p>
                     </div>
-                    <div class="col-sm-6 col-md-4 text-center aboutus-hover">
-                        <p><i class="fas fa-file-code"></i></p>
+                    <div class="col-sm-6 col-md-4 text-center aboutus-hover" data-aos="fade-in" data-aos-delay="300">
+                        <p><i class=" fas fa-file-code"></i></p>
                         <p class="aboutus-card-title mb-1">najwyższe standardy</p>
                         <p class="aboutus-card-text">Zachowujemy najwyższe standardy podczas pisania kodu.</p>
                     </div>
-                    <div class="col-sm-6 col-md-4 text-center aboutus-hover">
-                        <p><i class="fas fa-paw"></i></p>
+                    <div class="col-sm-6 col-md-4 text-center aboutus-hover" data-aos="fade-in" data-aos-delay="400">
+                        <p><i class=" fas fa-paw"></i></p>
                         <p class="aboutus-card-title mb-1">kochamy zwierzęta!</p>
                         <p class="aboutus-card-text">Wszystkie nasze gry są bezpieczne dla środowiska. :)</p>
                     </div>
-                    <div class="col-sm-6 col-md-4 text-center aboutus-hover">
-                        <p><i class="fas fa-hamburger"></i></p>
+                    <div class="col-sm-6 col-md-4 text-center aboutus-hover" data-aos="fade-in" data-aos-delay="500">
+                        <p><i class=" fas fa-hamburger"></i></p>
                         <p class="aboutus-card-title mb-1">lubimy dobre jedzenie</p>
                         <p class="aboutus-card-text">Lubimy dobrze zjeść przed przystąpieniem do naszych zadań.</p>
                     </div>
-                    <div class="col-sm-6 col-md-4 text-center aboutus-hover">
-                        <p><i class="fas fa-glass-cheers"></i></p>
+                    <div class="col-sm-6 col-md-4 text-center aboutus-hover" data-aos="fade-in" data-aos-delay="600">
+                        <p><i class=" fas fa-glass-cheers"></i></p>
                         <p class="aboutus-card-title mb-1">świetne relacje</p>
                         <p class="aboutus-card-text">Zachowujemy świetne relacje z naszymi klientami!</p>
                     </div>
@@ -344,32 +347,32 @@
 
             <div class="container pb-4">
                 <div class="row text-center achievements-list">
-                    <div class="col-md-6 col-lg-4 col-xl-2 achievement">
+                    <div class="col-md-6 col-lg-4 col-xl-2 achievement" data-aos="fade-in" data-aos-delay="100">
                         <p><i class="fa-regular fa-thumbs-up"></i></p>
                         <p class="achievement-card-title mb-1">100%</p>
                         <p class="achievement-card-text">zadowolonych klientów</p>
                     </div>
-                    <div class="col-md-6 col-lg-4 col-xl-2 achievement">
+                    <div class="col-md-6 col-lg-4 col-xl-2 achievement" data-aos="fade-in" data-aos-delay="250">
                         <p><i class="fas fa-trophy"></i></p>
                         <p class="achievement-card-title mb-1">37</p>
                         <p class="achievement-card-text">zdobytych nagród</p>
                     </div>
-                    <div class="col-md-6 col-lg-4 col-xl-2 achievement">
+                    <div class="col-md-6 col-lg-4 col-xl-2 achievement" data-aos="fade-in" data-aos-delay="150">
                         <p><i class="fas fa-user-group"></i></p>
                         <p class="achievement-card-title mb-1">143</p>
                         <p class="achievement-card-text">pracowików</p>
                     </div>
-                    <div class="col-md-6 col-lg-4 col-xl-2 achievement">
+                    <div class="col-md-6 col-lg-4 col-xl-2 achievement" data-aos="fade-in" data-aos-delay="250">
                         <p><i class="fas fa-building"></i></p>
                         <p class="achievement-card-title mb-1">7</p>
                         <p class="achievement-card-text">nowoczesnych biur</p>
                     </div>
-                    <div class="col-md-6 col-lg-4 col-xl-2 achievement">
+                    <div class="col-md-6 col-lg-4 col-xl-2 achievement" data-aos="fade-in" data-aos-delay="100">
                         <p><i class="fas fa-dice"></i></p>
                         <p class="achievement-card-title mb-1">58</p>
                         <p class="achievement-card-text">stworzonych gier</p>
                     </div>
-                    <div class="col-md-6 col-lg-4 col-xl-2 achievement">
+                    <div class="col-md-6 col-lg-4 col-xl-2 achievement" data-aos="fade-in" data-aos-delay="300">
                         <p><i class="fas fa-share-nodes"></i></p>
                         <p class="achievement-card-title mb-1">80.000</p>
                         <p class="achievement-card-text">fanów w social media</p>
@@ -433,6 +436,14 @@
     <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
 
     <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init({
+            startEvent: 'DOMContentLoaded',
+            offset: 200,
+            once: true
+        });
+    </script>
     <script src="js/slicksettings.js"></script>
     <script src="js/script.js"></script>
 </body>
